vlib/v/checker/tests/comptime_call_method_args_err.vv
module main

struct S1 {}

fn main() {
	s1 := S1{}

	$for method in S1.methods {
		println(s1.$method('yo'))
	}
}

fn (t S1) method_hello() string {
	return 'Hello'
}
